apps/base/tandoor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
